--- a/ponsol2web/templates/ponsol2web/about.html
+++ b/ponsol2web/templates/ponsol2web/about.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <h2>Citing PON-Sol</h2>
+            <h2>Citing PON-Sol2</h2>
             <ol>
                 <li><p>PON-Sol2 was developed by Lianjie Zeng, Yang Yang and Mauno Vihinen. Manuscript describing the
                     method has been submitted. <span class="label label-success">Waiting...</span></p>
@@ -28,12 +28,12 @@
             <p>
                 To start using PON-Sol2, you just need to provide protein sequence and amino acid substitution
                 information. For protein sequences, there are two ways to input: directly by providing FASTA sequences
-                or list of IDs( GI, Ensemble ID or UniProt). These data can be written or pasted to the boxes in the
+                or list of IDs (GI, Ensemble ID or UniProt). These data can be written or pasted to the boxes in the
                 input forms or uploaded as a file. Both types allow the submission of variants in multiple queries
                 simultaneously.
             </p>
             <p>
-                In protein predict, you can also predict all the 19 possible single substitutions.
+                In protein prediction, this routine predicts all the 19 possible single amino acid substitutions.
             </p>
             <p>
                 To look for an input example, please click the "Example" text on the input page.
@@ -99,9 +99,9 @@ V2A
 </code></pre>
             </ol>
 
-            <h3>Protein Predict</h3>
+            <h3>Protein Prediction</h3>
             <p>
-                Protein predict will predict all the 19 possible single substitutions. Only one protein can be provided
+                Protein prediction will predict all the 19 possible single substitutions. Only one protein can be provided
                 at a time. Provide the sequences either in FASTA format or use an ID (GI, Ensemble ID or UniProt). It
                 will take a long time, please be patient and the result will be sent to email.
             </p>
