--- a/ponsol2web/templates/ponsol2web/base_generic.html
+++ b/ponsol2web/templates/ponsol2web/base_generic.html
@@ -36,8 +36,8 @@
             {#            </div>#}
             <ul class="nav nav-justified">
                 <li><a href="{% url "ponsol2:index" %}">Home</a></li>
-                <li><a href="{% url "ponsol2:input" %}">Variations predict</a></li>
-                <li><a href="{% url "ponsol2:protein-predict" %}">Protein Predict</a></li>
+                <li><a href="{% url "ponsol2:input" %}">Variation prediction</a></li>
+                <li><a href="{% url "ponsol2:protein-predict" %}">Protein prediction</a></li>
                 <li><a href="{% url "ponsol2:disclaimer" %}">Disclaimer</a></li>
                 <li><a href="{% url "ponsol2:about" %}">About</a></li>
             </ul>
