--- a/ponsol2web/templates/ponsol2web/email/base_generic.html
+++ b/ponsol2web/templates/ponsol2web/email/base_generic.html
@@ -47,8 +47,7 @@
                     </div>
                 {% elif task.status == "finished" %}
                     <div class="" role="alert"><strong>Finished!</strong> This task(id={{ task.id }}) is finished, and
-                        the result is the
-                        followed.
+                        the results are as follows.
 {#                        Running time is from {{ task.start_time }} to {{ task.finish_time }}#}
                     </div>
                 {% elif task.status == "error" %}
