--- a/ponsol2web/templates/ponsol2web/email/email.html
+++ b/ponsol2web/templates/ponsol2web/email/email.html
@@ -30,8 +30,9 @@
         {% if task.status == "error" %}
             {{ task.error_msg }}
             {% else %}
-            The attached is the result of your submit.<br>
+            Please find your results from the attachment.
         {% endif %}
+        <br>
 
     {#            <p>#}
     {#                If you find that there is no result or some variation have been missed, it is usually due to an#}
