--- a/ponsol2web/templates/ponsol2web/index.html
+++ b/ponsol2web/templates/ponsol2web/index.html
@@ -11,18 +11,19 @@
             organism.
         </p>
 
-        <p>
+        <p class="text-justify">
+            PON-Sol2 was developed in collaboration between
+            <a href="http://structure.bmc.lu.se/">
+                the groups of Prof. Mauno Vihinen
+            </a>
+            in Lund University
+            and
+            Assoc. Prof. Yang Yang in Soochow University.
             You can also visit
             <a class=""
                href="http://139.196.42.166:8010/" target="_blank">
                 the mirror website in Soochow University, China.
             </a>
-            <br>
-            The project is supported by
-            <a href="http://structure.bmc.lu.se/">
-                Prof. Mauno Vihinen Group
-            </a>
-            in Lund University.
         </p>
         <p><a class="btn btn-lg btn-success" href="{% url "ponsol2:input" %}" role="button">Get started</a></p>
     </div>
@@ -60,7 +61,7 @@
     <div class="row text-justify" style=" padding: 30px">
         <h1 class="text-justify text-capitalize">How to cite?</h1>
         <p>
-            PON-Sol2 manuscript has been submitted.
+            PON-Sol2 manuscript has been submitted. In the meantime if using the service cite the URL.
             <br>
             {#        <a class="btn btn-success btn-xs" href="#" target="_blank"> Go to Bioinformatics </a>#}
         </p>
