--- a/ponsol2web/templates/ponsol2web/predict_index.html
+++ b/ponsol2web/templates/ponsol2web/predict_index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="page-header">
-        <h1>Predict<small></small></h1>
+        <h1>Variation Prediction<small></small></h1>
     </div>
     <div class="row" style="padding-left: 20px; padding-right: 20px">
         <p class="lead">
